# substack-newletters-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  prefect-cloud.yaml  prefect-local.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
frontend/: Dockerfile  __init__.py  app.py  gradio_app.py  streamlit_app.py
src/: __init__.py  config.py
src/api/: main.py
src/api/exceptions/: __init__.py  exception_handlers.py
src/api/middleware/: __init__.py  logging_middleware.py
src/api/models/: __init__.py  api_models.py  provider_models.py
src/api/routes/: __init__.py  health_routes.py  search_routes.py  session_routes.py
src/api/services/: __init__.py  generation_service.py  search_service.py
src/api/services/agent/: __init__.py  chat_service.py  llm_factory.py  naming_service.py
src/api/services/providers/: openai_service.py  (+2 more)
src/configs/: feeds_rss.yaml
src/infrastructure/: __init__.py
src/infrastructure/qdrant/: __init__.py  create_collection.py  create_indexes.py  delete_collection.py  ingest_from_sql.py  qdrant_vectorstore.py
src/infrastructure/supabase/: __init__.py  create_db.py  delete_db.py  init_session.py  session_repository.py
src/models/: article_models.py  session_models.py  sql_models.py  vectorstore_models.py
src/pipelines/: __init__.py
src/pipelines/flows/: __init__.py  embeddings_ingestion_flow.py  rss_ingestion_flow.py
src/pipelines/tasks/: __init__.py  fetch_rss.py  ingest_embeddings.py  ingest_rss.py
src/utils/: __init__.py  logger_util.py  text_splitter.py
(+8 files in other folders)
